--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "@rails/webpacker": "4.2.2",
     "@tailwindcss/ui": "^0.1.3",
     "choices.js": "^9.0.1",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "@fullhuman/postcss-purgecss": "^2.1.0",
+    "@tailwindcss/custom-forms": "^0.2.1",
+    "tailwindcss": "^1.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^2.1.0",
-    "@tailwindcss/custom-forms": "^0.2.1",
-    "tailwindcss": "^1.2.0",
     "webpack-dev-server": "^3.10.3"
   }
 }
