Add panchayat admin

--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,8 @@ config/master.key
 # dotenv
 # TODO Comment out this rule if environment variables can be committed
 .env
-
+.generators
+.rakeTasks
 ## Environment normalization:
 /.bundle
 /vendor/bundle
