--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,11 @@ yarn-debug.log*
 /data/*
 
 .idea
+
+ Ignore these associated with reason-react and bsb
+.merlin
+lib/bs/
+npm-debug.log
+.DS_Store
+.bsb.lock
+*.bs.js
