--- a/package.json
+++ b/package.json
@@ -2,19 +2,31 @@
   "name": "daksha",
   "private": true,
   "dependencies": {
+    "@coronasafe/prescription-builder": "^0.1.6",
+    "@fullhuman/postcss-purgecss": "^2.1.0",
+    "@glennsl/bs-json": "^5.0.1",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
-    "@tailwindcss/ui": "^0.1.3",
-    "choices.js": "^9.0.1",
-    "turbolinks": "^5.2.0",
-    "@fullhuman/postcss-purgecss": "^2.1.0",
     "@tailwindcss/custom-forms": "^0.2.1",
-    "tailwindcss": "^1.2.0"
+    "@tailwindcss/ui": "^0.1.3",
+    "bs-webapi": "^0.16.1",
+    "choices.js": "^9.0.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "reason-react": "0.9.1",
+    "tailwindcss": "^1.2.0",
+    "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
+    "bs-platform": "8.0.3",
     "webpack-dev-server": "^3.10.3"
+  },
+  "scripts": {
+    "postinstall": "yarn run re:build",
+    "re:build": "bsb -make-world -clean-world",
+    "re:watch": "bsb -make-world -clean-world -w"
   }
 }
