--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "daksha",
   "private": true,
   "dependencies": {
-    "@coronasafe/prescription-builder": "^0.1.6",
+    "@coronasafe/prescription-builder": "^0.1.10",
     "@fullhuman/postcss-purgecss": "^2.1.0",
     "@glennsl/bs-json": "^5.0.1",
     "@rails/actioncable": "^6.0.0",
@@ -10,18 +10,18 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
     "@tailwindcss/custom-forms": "^0.2.1",
-    "@tailwindcss/ui": "^0.1.3",
+    "@tailwindcss/ui": "^0.3.0",
     "bs-webapi": "^0.16.1",
     "choices.js": "^9.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "reason-react": "0.9.1",
-    "tailwindcss": "^1.2.0",
-    "turbolinks": "^5.2.0"
+    "tailwindcss": "^1.4.6",
+    "turbolinks": "^5.2.0",
+    "bs-platform": "8.0.3"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "bs-platform": "8.0.3",
     "webpack-dev-server": "^3.10.3"
   },
   "scripts": {
