--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "daksha",
+  "name": "telemed",
   "private": true,
   "dependencies": {
-    "@coronasafe/prescription-builder": "^0.1.11",
+    "@coronasafe/prescription-builder": "^0.1.13",
     "@fullhuman/postcss-purgecss": "^2.1.0",
     "@glennsl/bs-json": "^5.0.1",
     "@rails/actioncable": "^6.0.0",
@@ -18,6 +18,7 @@
     "reason-react": "0.9.1",
     "tailwindcss": "^1.4.6",
     "turbolinks": "^5.2.0",
+    "gentype": "^3.27.0",
     "bs-platform": "8.0.3"
   },
   "version": "0.1.0",
